Add some assets and some components

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,11 @@
+
+
+// Colors
+$deepBlue: #001C58;
+
+
 body {
+  background-color: $deepBlue;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
