Added BK img to start page

--- a/src/pages/StartPage/StartPage.scss
+++ b/src/pages/StartPage/StartPage.scss
@@ -1,3 +1,6 @@
 .StartPage {
-    
+    background-image: url("/img/start_background.png");
+    background-repeat: no-repeat, repeat;
+    background-position: center;
+    background-size: cover;
 }
