--- a/src/index.scss
+++ b/src/index.scss
@@ -1,20 +1,37 @@
+// Fonts
+@font-face {
+  font-family: 'Conforta';
+  // font-family: 'Conforta', 'Roboto', 'Helvetica Neue', sans-serif;
+  src: url("/fonts/Comfortaa-Regular.ttf") format("truetype");
+}
+$font-conforta: 'Conforta', 'Roboto', 'Helvetica Neue', sans-serif;
 
+@font-face {
+  font-family: "LeagueGothic-condensed";
+  src: url("/fonts/LeagueGothic-CondensedRegular.otf") format("truetype");
+}
+$font-lg-condensed: 'LeagueGothic-condensed', 'Roboto', 'Helvetica Neue', sans-serif;
+
+@font-face {
+  font-family: "LeagueGothic-italic";
+  src: url("/fonts/LeagueGothic-Italic.otf") format("truetype");
+}
+$font-lg-italic: 'LeagueGothic-italic', 'Roboto', 'Helvetica Neue', sans-serif;
 
 // Colors
-$deepBlue: #001C58;
-
+$electricPink: #CD30D1;
+$electricPurple: #841ABC;
+$darkBlue: #001C58;
+$deepBlue: #003399;
+$electricBlue: #33FFFF;
 
 body {
-  background-color: $deepBlue;
+  background-color: $darkBlue;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-size: 16px;
+  color: whitesmoke;
+  font-family: 'Conforta', 'Roboto', 'Helvetica Neue', sans-serif;;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
