--- a/src/pages/StartPage/StartPage.scss
+++ b/src/pages/StartPage/StartPage.scss
@@ -1,6 +1,17 @@
+import 
+
 .StartPage {
+    width: 100%;
+    height: 100vh;
     background-image: url("/img/start_background.png");
     background-repeat: no-repeat, repeat;
     background-position: center;
     background-size: cover;
+
+    
+}
+
+.title {
+    color: white;
+    font-family: 'LeagueGothic-italic';
 }
