--- a/src/pages/StartPage/StartPage.scss
+++ b/src/pages/StartPage/StartPage.scss
@@ -8,7 +8,12 @@
     
     .title {
         color: white;
+        font-size: 40rem;
         font-family: 'LeagueGothic-italic';
+    }
+
+    .title-container {
+        height: 70vh;
     }
 }
 
