--- a/src/components/PlayButton/PlayButton.scss
+++ b/src/components/PlayButton/PlayButton.scss
@@ -3,14 +3,15 @@
 
 .PlayButton {
     position: absolute;
-    width: 560px;
-    height: 180px;
+    width: 390px;
+    height: 120px;
     border-radius: 100px;
     font-family: LeagueGothic-italic;
-    font-size: 8rem;
+    margin-top: -40px;
+    font-size: 5rem;
     color: #FFFFFF;
     text-align: left;
-    background: linear-gradient(0deg, rgba(0,28,88,0) 0%, rgba(205,48,209,1) 70%);    
+    background: linear-gradient(90deg, rgba(0,28,88,1) 0%, rgba(205,48,209,1) 70%, rgba(205,48,209,1) 100%);    
     border: none;
 
     &:hover .button-icon{
@@ -26,18 +27,18 @@
         position: relative;
         display: inline-block;
         border-radius: 100px;
-        width: 150px;
-        height: 150px;
+        width: 100px;
+        height: 100px;
         background-color: $darkBlue;
-        top: 8%;
-        right: -6%;
+        top: 0;
+        right: -9%;
 
         img {
             position: relative;
-            right: -35%;
+            right: -33%;
             margin: 0 auto;
-            top: -18%;
-            width: 60px;
+            top: 0;
+            width: 45px;
         }
     }
 
