--- a/src/components/ShareButton/ShareButton.scss
+++ b/src/components/ShareButton/ShareButton.scss
@@ -1,6 +1,22 @@
+@import "../../index.scss";
+
 .ShareButton {
-    img {
-        width: 70%;
-        margin: 20% auto,
-    }   
+  width: 75px;
+  height: 75px;
+  border-radius: 100px;
+  text-align: center;
+  cursor: pointer;
+  border: 4px solid $electricBlue;
+  background: $darkBlue;
+  box-shadow: 0px 0px 8px $electricBlue;
+  transition: background-color 0.5s 0.2s linear;
+
+  &:hover {
+    background: radial-gradient(ellipse at center, $darkBlue 0%, $electricBlue 80%, $electricBlue 100%);
+  }
+
+  img {
+    width: 60%;
+    margin: 15px auto;
+  }
 }
