--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,10 @@
+// Colors
+$electricPink: #CD30D1;
+$electricPurple: #841ABC;
+$darkBlue: #001C58;
+$deepBlue: #003399;
+$electricBlue: #33FFFF;
+
 // Fonts
 @font-face {
   font-family: 'Conforta';
@@ -24,47 +31,32 @@ $shadow-hover : 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 .sh-1 {
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-  &:hover {
-    box-shadow: $shadow-hover;
-  }
 }
 
 .sh-2 {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  &:hover {
-    box-shadow: $shadow-hover;
-  }
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 .sh-3 {
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-  &:hover {
-    box-shadow: $shadow-hover;
-  }
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 .sh-4 {
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  &:hover {
-    box-shadow: $shadow-hover;
-  }
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 .sh-5 {
   box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
-  &:hover {
-    box-shadow: $shadow-hover;
-  }
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
-// Colors
-$electricPink: #CD30D1;
-$electricPurple: #841ABC;
-$darkBlue: #001C58;
-$deepBlue: #003399;
-$electricBlue: #33FFFF;
-
 body {
+  width: 100%;
+  height: 100vh;
+
   background-color: $darkBlue;
   margin: 0;
   font-size: 16px;
