--- a/src/components/PlayButton/PlayButton.scss
+++ b/src/components/PlayButton/PlayButton.scss
@@ -1,47 +1,52 @@
-
 @import "../../index.scss";
 
 .PlayButton {
-    position: absolute;
-    width: 390px;
-    height: 120px;
-    border-radius: 100px;
-    font-family: LeagueGothic-italic;
-    margin-top: -40px;
-    font-size: 5rem;
-    color: #FFFFFF;
-    text-align: left;
-    background: linear-gradient(90deg, rgba(0,28,88,1) 0%, rgba(205,48,209,1) 70%, rgba(205,48,209,1) 100%);    
-    border: none;
+  position: absolute;
+  width: 390px;
+  height: 120px;
+  border-radius: 100px;
+  font-family: LeagueGothic-italic;
+  margin-top: -40px;
+  font-size: 5rem;
+  color: #ffffff;
+  text-align: left;
+  background: linear-gradient(
+    90deg,
+    rgba(0, 28, 88, 1) 0%,
+    rgba(205, 48, 209, 1) 70%,
+    rgba(205, 48, 209, 1) 100%
+  );
+  border: none;
 
-    &:hover .button-icon{
-        background-color: $electricPink;
-    }
-
-    .button-label {
-        display: inline-block;
-        margin-left: 2rem;
-    }
-
+  &:hover {
+    cursor: pointer;
     .button-icon {
-        position: relative;
-        display: inline-block;
-        border-radius: 100px;
-        width: 100px;
-        height: 100px;
-        background-color: $darkBlue;
-        top: 0;
-        right: -9%;
-
-        img {
-            position: relative;
-            right: -33%;
-            margin: 0 auto;
-            top: 0;
-            width: 45px;
-        }
+      background-color: $electricPink;
     }
+  }
 
+  .button-label {
+    display: inline-block;
+    margin-left: 2rem;
+  }
 
+  .button-icon {
+    position: relative;
+    display: inline-block;
+    border-radius: 100px;
+    width: 100px;
+    height: 100px;
+    background-color: $darkBlue;
+    top: 0;
+    right: -9%;
+    transition: $ease-in;
 
+    img {
+      position: relative;
+      right: -33%;
+      margin: 0 auto;
+      top: 0;
+      width: 45px;
+    }
+  }
 }
