--- a/src/components/ShareButton/ShareButton.scss
+++ b/src/components/ShareButton/ShareButton.scss
@@ -7,12 +7,12 @@
   text-align: center;
   cursor: pointer;
   border: 4px solid $electricBlue;
-  background: $darkBlue;
+  background-color: $darkBlue;
   box-shadow: 0px 0px 8px $electricBlue;
-  transition: background-color 0.5s 0.2s linear;
+  transition: $ease-in;
 
   &:hover {
-    background: radial-gradient(ellipse at center, $darkBlue 0%, $electricBlue 80%, $electricBlue 100%);
+    background-color: rgba(51, 255, 255, 0.5);
   }
 
   img {
