--- a/src/index.scss
+++ b/src/index.scss
@@ -1,66 +1,76 @@
 // Colors
-$electricPink: #CD30D1;
-$electricPurple: #841ABC;
-$darkBlue: #001C58;
+$electricPink: #cd30d1;
+$electricPurple: #841abc;
+$darkBlue: #001c58;
 $deepBlue: #003399;
-$electricBlue: #33FFFF;
-$white: #FFFF;
+$electricBlue: #33ffff;
+$white: #ffff;
+
+// transitions
+$linear: all 0.5s 0.1s linear;
+$ease-in: all 0.5s 0.1s ease-out;
+
 //TODO: move it to variables.scss
 :export {
+  // Colors
   electricPink: $electricPink;
   electricPurple: $electricPurple;
   darkBlue: $darkBlue;
   deepBlue: $deepBlue;
   electricBlue: $electricBlue;
   white: $white;
+  // transitions
+  linear: $linear;
+  ease-in: $ease-in;
 }
 
 // Fonts
 @font-face {
-  font-family: 'Conforta';
+  font-family: "Conforta";
   src: url("/fonts/Comfortaa-Regular.ttf") format("truetype");
 }
-$font-conforta: 'Conforta', 'Roboto', 'Helvetica Neue', sans-serif;
+$font-conforta: "Conforta", "Roboto", "Helvetica Neue", sans-serif;
 
 @font-face {
   font-family: "LeagueGothic-condensed";
   src: url("/fonts/LeagueGothic-CondensedRegular.otf") format("truetype");
 }
-$font-lg-condensed: 'LeagueGothic-condensed', 'Roboto', 'Helvetica Neue', sans-serif;
+$font-lg-condensed: "LeagueGothic-condensed", "Roboto", "Helvetica Neue",
+  sans-serif;
 
 @font-face {
   font-family: "LeagueGothic-italic";
   src: url("/fonts/LeagueGothic-Italic.otf") format("truetype");
 }
-$font-lg-italic: 'LeagueGothic-italic', 'Roboto', 'Helvetica Neue', sans-serif;
+$font-lg-italic: "LeagueGothic-italic", "Roboto", "Helvetica Neue", sans-serif;
 
 // Shadows
 
-$shadow-hover : 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+$shadow-hover: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 
 .sh-1 {
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
 .sh-2 {
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
 .sh-3 {
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
 .sh-4 {
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
 .sh-5 {
-  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
 body {
@@ -71,8 +81,7 @@ body {
   margin: 0;
   font-size: 16px;
   color: whitesmoke;
-  font-family: 'Conforta', 'Roboto', 'Helvetica Neue', sans-serif;;
+  font-family: "Conforta", "Roboto", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
