Improvement styles using scss modules

--- a/src/components/PagesContainer/PagesContainer.module.scss
+++ b/src/components/PagesContainer/PagesContainer.module.scss
@@ -6,7 +6,7 @@
     background-position: center;
     background-size: cover;
 
-    .page-wrapper {
+    .pageWrapper {
         display: flex;
         flex-flow: row;
         justify-content: center;
