--- a/src/components/CircleButton/CircleButton.module.scss
+++ b/src/components/CircleButton/CircleButton.module.scss
@@ -4,14 +4,14 @@
   @include sh-2;
 
   position: fixed;
-  top: 10%;
+  top: 8%;
   left: 10%;
   display: flex;
   flex-flow: column;
   justify-content: center;
   align-items: center;
-  width: 100px;
-  height: 100px;
+  width: $circleBtnWidth;
+  height: $circleBtnHeight;
   border-radius: 100px;
   cursor: pointer;
   border: 4px solid $electricBlue;
