--- a/src/components/LateralButton/LateralButton.module.scss
+++ b/src/components/LateralButton/LateralButton.module.scss
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  width: 8%;
+  width: $lateralBtnWidth;
   position: fixed;
   top: 0;
   color: $white;
