--- a/src/components/ShareButton/ShareButton.module.scss
+++ b/src/components/ShareButton/ShareButton.module.scss
@@ -1,8 +1,12 @@
 @import "../../index.scss";
 
 .ShareButton {
-  width: 100px;
-  height: 100px;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  width: $circleBtnWidth;
+  height: $circleBtnHeight;
   border-radius: 100px;
   text-align: center;
   cursor: pointer;
