--- a/src/containers/PagesContainer/PagesContainer.module.scss
+++ b/src/containers/PagesContainer/PagesContainer.module.scss
@@ -1,16 +1,20 @@
+@import "~bootstrap/scss/_functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
+@import "~bootstrap/scss/progress";
+
 .PagesContainer {
-    width: 100%;
-    height: 100vh;
-    background-image: url("/img/start_background.png");
-    background-repeat: no-repeat, repeat;
-    background-position: center;
-    background-size: cover;
+  width: 100%;
+  height: 100vh;
+  background-image: url("/img/start_background.png");
+  background-repeat: no-repeat, repeat;
+  background-position: center;
+  background-size: cover;
 
-    .pageWrapper {
-        display: flex;
-        flex-flow: row;
-        justify-content: center;
-        align-items: center;
-    }
+  .pageWrapper {
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
-
